Updating EDA notebook

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "''"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
     "pdf.cell(0,0,f'Reporte del año {year}',0,1,'R')\n",
     "\n",
     "\n",
-    "pdf.output(\"Mi_Primer_PDF.pdf\")"
+    "pdf.output(\"reports/Mi_Primer_PDF.pdf\")"
    ]
   },
   {
